# glsl-layout

./: CHANGELOG.md  Cargo.toml  README.md
examples/: test.rs
glsl-layout-derive/: Cargo.toml
glsl-layout-derive/src/: lib.rs
src/: align.rs  array.rs  cgmath.rs  glam.rs  lib.rs  mat.rs  nalgebra.rs  scalar.rs  tests.rs  uniform.rs  vec.rs
