[package]
name = "glsl-layout"
version = "0.5.1"
authors = ["Zakarum <zakarumych@ya.ru>"]
description = "Provides data types and traits to build structures ready to upload into UBO."
license = "MIT/Apache-2.0"
repository = "https://github.com/rustgd/glsl-layout"
keywords = ["graphics", "glsl", "gamedev"]
edition = "2021"

[features]
bigger-arrays = []

[dependencies]
cgmath = { version = "0.18", optional = true }
nalgebra = { version = "0.31", optional = true }
glam = { version = "0.23", optional = true }
glsl-layout-derive = { path = "glsl-layout-derive", version = "0.4.0" }

[workspace]
members = ["glsl-layout-derive"]
