[package]
name = "glsl-layout-derive"
version = "0.1.0"
authors = ["Zakarum <scareaangel@gmail.com>"]
description = "Custom derive for `glsl-layout` crate."
license = "MIT/Apache-2.0"
repository = "https://github.com/rustgd/glsl-layout"
keywords = ["graphics", "glsl", "gamedev"]

[lib]
proc-macro = true

[features]
gfx = []

[dependencies]
syn = { version = "0.13", features = ["full"] }
quote = "0.5"
