[package]
name = "glsl-layout-derive"
version = "0.4.0"
authors = ["Zakarum <scareaangel@gmail.com>"]
description = "Custom derive for `glsl-layout` crate."
license = "MIT/Apache-2.0"
repository = "https://github.com/rustgd/glsl-layout"
keywords = ["graphics", "glsl", "gamedev"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.1"
